Web server starts and handles static

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
+build_flags = -DLOG_LOCAL_LEVEL=ESP_LOG_DEBUG
 framework = arduino
 upload_protocol = esptool
 monitor_speed = 115200
