web server works good now

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,5 @@ build_flags = -DLOG_LOCAL_LEVEL=ESP_LOG_DEBUG
 framework = arduino
 upload_protocol = esptool
 monitor_speed = 115200
+
+lib_deps = ESP Async WebServer
