--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,9 @@
 
 [env:esp32dev]
 platform = espressif32
-board = esp32dev
+board = esp32doit-devkit-v1
 build_flags = -DLOG_LOCAL_LEVEL=ESP_LOG_DEBUG
 framework = arduino
 upload_protocol = esptool
 monitor_speed = 115200
-
 lib_deps = ESP Async WebServer
